See https://github.com/Qovery/qovery-openapi-spec/commit/a4e008923c1f9b97f70cf4568721fcc2f7f0060a from refs/heads/main
